refactor: implement user token via header
